# riskscore

./: .gitignore  CONTRIBUTING.md  Makefile  README.en.md  README.md  config.py  download_data.sh  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: ci.yml
dashboard/: app.py
docs/: README.md
scripts/: aggregate_auxiliary_features.py  audit_consistency.py  evaluate.py  feature_engineering.py  generate_mock_data.py  merge_auxiliary_features.py  metrics_utils.py  preprocess.py  shap_analysis.py  train_models.py
tests/: test_pipeline.py
