[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riskscore"
version = "1.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
